--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -238,6 +238,7 @@ Examples:
 
 Displays details of policy at index 1 on the right panel.
 
+// tag::edit[]
 === Editing a person : `edit`
 
 Edits an existing person in the address book. +
@@ -264,7 +265,9 @@ NRIC: S0000001A; Phone: 91234567; Email: johndoe@example.com; Address: Blk 30 Ge
 Policies: [Teenage]
 Tags: [diabetic]
 ```
+// end::edit[]
 
+// tag::editpolicy[]
 === Editing a policy : `editpolicy`
 
 Edits an existing policy in the address book. +
@@ -293,6 +296,7 @@ Description: Honda Insurance; Coverage: 12 years, 11 months, 10 days; Price: $10
 Criteria: [diabetic]
 Tags: [sample]
 ```
+// end::editpolicy[]
 
 === Locating persons by name: `find`
 
@@ -606,13 +610,15 @@ Format: `assignpolicy INDEX pol/POLICY NAME`
 ****
 
 Examples:
+```
+`find Betsy`
+`assignpolicy 1 pol/Accident Insurance`
+```
 
-* `listpeople` +
-`assignpolicy 2 pol/Senior Care` +
-Assigns the 'Senior Care' (the second policy in the list) policy to the 2nd person in the list of people.
-* `find Betsy` +
-`assignpolicy 1 pol/Accident Insurance` +
-Assigns the 'Accident Insurance' (the first policy in the list) policy to the 1st person in the results of the `find` command.
+Expected output:
+```
+Assigned Policy: Accident Insurance to Person: Betsy Kumar
+```
 //end::assignpolicy[]
 
 //tag::unassignpolicy[]
@@ -630,12 +636,15 @@ Format: `unassignpolicy INDEX pol/POLICY NAME`
 
 Examples:
 
-* `listpeople` +
-`unassignpolicy 2 pol/Accident Insurance` +
-Removes the policy 'Accident Insurance' in the absolute list from the 2nd person in the displayed list of people.
-* `find Betsy` +
-`unassignpolicy 1 pol/Health insurance` +
-Removes the policy 'Health Insurance' in the absolute list from the 1st person in the results of the `find` command.
+```
+`find Betsy`
+`unassignpolicy 1 pol/Accident Insurance`
+```
+
+Expected output:
+```
+Unssigned Policy: Accident Insurance from Person: Betsy Kumar
+```
 //end::unassignpolicy[]
 
 //tag::deletetag[]
@@ -883,7 +892,7 @@ Restores first index of the list of bin items.
 >>> restore 1
 ```
 
-Expected Output: +
+Expected Output:
 ```
 Restored item: David Georgia NRIC: S0000010T Phone: 94820001 Email: davegeorge@example.com Address: 10th Fly street
 Date of birth: 5 March 1980 Gender: Male Date deleted: 22 Oct 2019 at 09:57 PM Expiry Date: 21 Nov 2019 at 09:57 PM
@@ -912,16 +921,17 @@ Format:
 
 Example:
 
-`binitemexpiry days/30` +
+`binitemexpiry days/30`
 
 Set all BinItems to expire 30 days their deletion. They will be removed permanently once they exceed their expiry date.
 
-Expected Output: +
+Expected Output:
 ```
 Changed bin item expiry time! Items in the Bin will be removed permanently 30 days after their deletion.
 ```
 // end::binitemexpiry[]
 
+// tag::undo[]
 === Undo recently entered commands : `undo`
 User can simply enter the command `undo` to undo the most recent address book data change.
 
@@ -934,8 +944,9 @@ An undo has been performed!
 
 [NOTE]
 An undo does not work for commands which do not make a change in the address book data (like `listpeople` for instance).
+// end::undo[]
 
-
+// tag::redo[]
 === Redo recently undone commands : `redo`
 User can simply enter the command `redo` to redo the most recent address book data change. A redo is possible only when
 an undo has been previously performed.
@@ -949,7 +960,9 @@ A redo has been performed!
 
 [NOTE]
 A redo does not work for commands which do not make a change in the address book data (like `listpeople` for instance).
+// end::redo[]
 
+// tag::history[]
 === Listing command history : `history`
 
 Shows a list of all previously entered (valid) commands in the right panel. Commands entered during the merging
@@ -971,7 +984,9 @@ Example:
 Expected Output:
 
 image::HistoryCommandExample.png[]
+// end::history[]
 
+// tag::navhistory[]
 === Navigating command history by pressing up/down keys
 
 Previously entered commands can be navigated in the `CommandBox` without explicity entering them by pressing
@@ -979,6 +994,7 @@ UP/DOWN keyboard keys. This is different from the above mentioned `history` comm
 entered which were invalid.
 
 Format: No command, simply press up/down keyboard keys.
+// end::navhistory[]
 
 === Exiting the program : `exit`
 
@@ -1021,7 +1037,7 @@ e.g. `addpolicy n/Senior Care d/care for seniors c/months/10 pr/$50000 [sa/50 ea
 * *List Bin Items* : `listbin`
 * *Edit Person* : `edit INDEX [n/NAME] [ic/NRIC] [p/PHONE] [e/EMAIL] [a/ADDRESS] [dob/DATE_OF_BIRTH]` +
 e.g. `edit 2 n/James Lee e/jameslee@example.com`
-* *Edit Policy* : `edit INDEX [n/NAME] [d/DESCRIPTION] [c/[days/DAYS_VALID][months/MONTHS_VALID][years/YEARS_VALID] ] [pr/PRICE]` +
+* *Edit Policy* : `editpolicy INDEX [n/NAME] [d/DESCRIPTION] [c/[days/DAYS_VALID][months/MONTHS_VALID][years/YEARS_VALID] ] [pr/PRICE]` +
 e.g. `editpolicy 1 n/Seniors`
 * *Find Person* : `find KEYWORD [MORE_KEYWORDS]` +
 e.g. `find James Jake`
