--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -42,7 +42,9 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 
 .  Refer to <<Features>> for details of each command.
 
-Recommended to be at a resolution of 1920x1080 with 100% (no) scaling for best usage. Weme requires a resolution that provides at least 750 pixels in height and 1000 pixels in width for smooth usage.
+****
+We recommend a minimum resolution of 1920x1080 with at maximum 150% scaling for best usage. Weme requires a resolution that provides at least 750 pixels in height and 1000 pixels in width for smooth usage.
+****
 
 [[Features]]
 == Features
